Added IDs to assignments, separated random and prioritizng controllers, added 'add' and 'delete' endpoints for assignments, implemented ability to save current schedule in memory

--- a/TrainTable/TrainTable.csproj
+++ b/TrainTable/TrainTable.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <UserSecretsId>9fdbde4f-b85f-44b1-993b-cecc90e73543</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
